refactor: update product images and hover images in Products section - removed outdated product images and hover images - added new product images and hover images for enhanced visual consistency - updated SCSS styles to reflect new image paths

--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -19,71 +19,71 @@ const defaultProducts: Product[] = [
   { 
     id: 1, 
     name: 'Flow Generator Lamp', 
-    image: '/shop/01.png',
-    hoverImage: '/shop/01.webp',
+    image: '/shop/prod-01.png',
+    hoverImage: '/shop/HLA-FlowGeneratorLamp.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-boxed-lava-lamp',
     darkBackground: true
   },
   { 
     id: 2, 
     name: 'Hot Sauce Original Trio', 
-    image: '/shop/02.png',
-    hoverImage: '/shop/02.webp',
+    image: '/shop/prod-02.png',
+    hoverImage: '/shop/HLA-HotSauces.jpg',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-boxed-hot-sauces',
     darkBackground: true
   },
   { 
     id: 3, 
     name: 'Lava Scented Candle', 
-    image: '/shop/03.png',
-    hoverImage: '/shop/03.webp',
+    image: '/shop/prod-03.png',
+    hoverImage: '/shop/HLA-LavaScentedCandle.webp',
     url: 'https://shop.hotlavaagency.com/products/concrete-candle-lava-scent',
     darkBackground: true
   },
   { 
     id: 4, 
     name: 'Volcanic Hoodie', 
-    image: '/shop/04.png',
-    hoverImage: '/shop/04.webp',
+    image: '/shop/prod-04.png',
+    hoverImage: '/shop/HLA-VolcanicHoodie.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-hoodie',
     darkBackground: true
   },
   { 
     id: 5, 
     name: 'Ember Key Charm', 
-    image: '/shop/05.png',
-    hoverImage: '/shop/05.webp',
+    image: '/shop/prod-05.png',
+    hoverImage: '/shop/HLA-EmberKeyCharm.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-keychain',
     darkBackground: true
   },
   { 
     id: 6, 
     name: 'Ember Thinking Cap', 
-    image: '/shop/06.png',
-    hoverImage: '/shop/06.webp',
+    image: '/shop/prod-06.png',
+    hoverImage: '/shop/HLA-EmberThinkingCap.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-hat',
     darkBackground: true
   },
   { 
     id: 7, 
     name: 'Lava Lamp Thinking Cap', 
-    image: '/shop/11.png',
-    hoverImage: '/shop/LavaLampHat.png',
+    image: '/shop/prod-11.png',
+    hoverImage: '/shop/HLA-LavaLampHat.png',
     url: 'https://shop.hotlavaagency.com/products/lava-lamp-hat',
     darkBackground: true
   },
   { 
     id: 8, 
     name: 'Hot Sauce Triple Burn', 
-    image: '/shop/Hot-Sauces.jpg',
-    hoverImage: '/shop/Hot-Sauces.jpg',
+    image: '/shop/prod-08.png',
+    hoverImage: '/shop/HLA-HotSauces.jpg',
     url: 'https://shop.hotlavaagency.com/',
     darkBackground: true
   },
   { 
     id: 9, 
     name: 'Non-Toxic Tee', 
-    image: '/shop/HLA-Sunscreen-Lady.jpg',
+    image: '/shop/prod-07.png',
     hoverImage: '/shop/HLA-Sunscreen-Lady.jpg',
     url: 'https://shop.hotlavaagency.com/',
     darkBackground: true
@@ -91,24 +91,24 @@ const defaultProducts: Product[] = [
   { 
     id: 10, 
     name: 'Make it Hot Hoodie', 
-    image: '/shop/MakeITHot.png',
-    hoverImage: '/shop/MakeITHot.webp',
+    image: '/shop/prod-10.png',
+    hoverImage: '/shop/HLA-MakeItHot.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-make-it-hot-hoodie',
     darkBackground: true
   },
   { 
     id: 11, 
     name: 'Sweet Magma Diffuser', 
-    image: '/shop/Diffuser.jpg',
-    hoverImage: '/shop/Diffuser.jpg',
+    image: '/shop/prod-09.png',
+    hoverImage: '/shop/HLA-Diffuser.jpg',
     url: 'https://shop.hotlavaagency.com/',
     darkBackground: true
   },
   { 
     id: 12, 
     name: 'Molten Oven Mitten', 
-    image: '/shop/12.png',
-    hoverImage: '/shop/HLAOvenMittens.webp',
+    image: '/shop/prod-12.png',
+    hoverImage: '/shop/HLA-OvenMittens.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-mitts',
     darkBackground: true
   },
