--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -83,55 +83,55 @@
     // grid-column: 1;
     // grid-row: 1;
     margin-top: 0; 
-    background-image: url('/shop/01.png');
+    background-image: url('/shop/prod-01.png');
     background-color: #A8D5E2;
   }
 
   &--2 {
     // grid-column: 2;
     // grid-row: 1; 
-    background-image: url('/shop/02.png');
+    background-image: url('/shop/prod-02.png');
     background-color: #FFB347;
   }
 
   &--3 {
     // grid-column: 3;
     // grid-row: 1; 
-    background-image: url('/shop/03.png');
+    background-image: url('/shop/prod-03.png');
     background-color: #FF6B35;
   }
 
   &--4 {
     // grid-column: 1;
     // grid-row: 2; 
-    background-image: url('/shop/04.png');
-    // background-color: #f74a20;
+    background-image: url('/shop/prod-04.png');
+    background-color: #f74a20;
   }
 
   &--5 {
     grid-column: 2;
     grid-row: 2; 
-    background-image: url('/shop/05.png');
+    background-image: url('/shop/prod-05.png');
     background-color: #A8D5E2;
   }
 
   &--6 {
     // grid-column: 3;
     // grid-row: 2; 
-    background-image: url('/shop/06.png');
+    background-image: url('/shop/prod-06.png');
     background-color: #FFB347;
   }
   &--7 {
     // grid-column: 2;
     // grid-row: 4; 
-    background-image: url('/shop/11.png');
+    background-image: url('/shop/prod-11.png');
     background-color: #ddf3e7;
   }
 
   &--8 {
     // grid-column: 2;
     // grid-row: 3; 
-    background-image: url('/shop/08.png');
+    background-image: url('/shop/prod-08.png');
     background-color: #ffba30;
 
     img {
@@ -142,14 +142,14 @@
   &--9 {
     // grid-column: 1;
     // grid-row: 3;  
-    background-image: url('/shop/07.png');
+    background-image: url('/shop/prod-07.png');
     background-color: #f74a20;
   }
 
   &--10 {
     // grid-column: 1;
     // grid-row: 4; 
-    background-image: url('/shop/10.png');
+    background-image: url('/shop/prod-10.png');
     background-color: #ffba30;
     background-size: cover;
   }
@@ -158,7 +158,7 @@
   &--11 {
     // grid-column: 3;
     // grid-row: 3; 
-    background-image: url('/shop/09.png');
+    background-image: url('/shop/prod-09.png');
     background-color: #f74a20; 
 
     img {
@@ -170,7 +170,7 @@
   &--12 {
     // grid-column: 3;
     // grid-row: 4; 
-    background-image: url('/shop/12.png');
+    background-image: url('/shop/prod-12.png');
     background-color: #ddf3e7;
     background-size: cover;
   }
