refactor: comment out background color in Products section styles for clarity

--- a/src/styles/scss/_products.scss
+++ b/src/styles/scss/_products.scss
@@ -105,7 +105,7 @@
     // grid-column: 1;
     // grid-row: 2; 
     background-image: url('/shop/prod-04.png');
-    background-color: #f74a20;
+    // background-color: #f74a20;
   }
 
   &--5 {
