refactor: update product URLs and comment out unused product entry in Products section

--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -24,14 +24,14 @@ const defaultProducts: Product[] = [
     url: 'https://shop.hotlavaagency.com/products/hot-lava-boxed-lava-lamp',
     darkBackground: true
   },
-  { 
-    id: 2, 
-    name: 'Hot Sauce Original Trio', 
-    image: '/shop/prod-02.png',
-    hoverImage: '/shop/HLA-HotSauces.jpg',
-    url: 'https://shop.hotlavaagency.com/products/hot-lava-boxed-hot-sauces',
-    darkBackground: true
-  },
+  // { 
+  //   id: 2, 
+  //   name: 'Hot Sauce Original Trio', 
+  //   image: '/shop/prod-02.png',
+  //   hoverImage: '/shop/HLA-HotSauces.jpg',
+  //   url: 'https://shop.hotlavaagency.com/products/hot-lava-boxed-hot-sauces',
+  //   darkBackground: true
+  // },
   { 
     id: 3, 
     name: 'Lava Scented Candle', 
@@ -77,7 +77,7 @@ const defaultProducts: Product[] = [
     name: 'Hot Sauce Triple Burn', 
     image: '/shop/prod-08.png',
     hoverImage: '/shop/HLA-HotSauces.jpg',
-    url: 'https://shop.hotlavaagency.com/',
+    url: 'https://shop.hotlavaagency.com/products/hot-lava-trio-hot-sauce-box-2025',
     darkBackground: true
   },
   { 
@@ -85,7 +85,7 @@ const defaultProducts: Product[] = [
     name: 'Non-Toxic Tee', 
     image: '/shop/prod-07.png',
     hoverImage: '/shop/HLA-Sunscreen-Lady.jpg',
-    url: 'https://shop.hotlavaagency.com/',
+    url: 'https://shop.hotlavaagency.com/products/hot-lava-non-toxic-t-shirt',
     darkBackground: true
   },
   { 
