refactor: update product images and background styles in Products section - replaced existing product images with new versions for improved quality - adjusted background colors and sizes for several products to enhance visual appeal

--- a/src/components/sections/Products.astro
+++ b/src/components/sections/Products.astro
@@ -45,7 +45,7 @@ const defaultProducts: Product[] = [
     hoverImage: '/shop/HLA-LavaScentedCandle.webp',
     url: 'https://shop.hotlavaagency.com/products/concrete-candle-lava-scent',
     darkBackground: true,
-    bgColor: '#FF6B35',
+    bgColor: '#f74a20',
     bgSize: 'contain',
   },
   { 
@@ -55,8 +55,8 @@ const defaultProducts: Product[] = [
     hoverImage: '/shop/HLA-VolcanicHoodie.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-hoodie',
     darkBackground: true,
-    bgColor: 'transparent',
-    bgSize: 'contain',
+    bgColor: '#f74a20',
+    bgSize: 'cover',
   },
   { 
     id: 5, 
@@ -105,7 +105,7 @@ const defaultProducts: Product[] = [
     hoverImage: '/shop/HLA-LavaLampHat.png',
     url: 'https://shop.hotlavaagency.com/products/lava-lamp-hat',
     darkBackground: true,
-    bgColor: '#ddf3e7',
+    bgColor: '#A8D5E2',
     bgSize: 'contain',
   },
   { 
@@ -125,7 +125,7 @@ const defaultProducts: Product[] = [
     hoverImage: '/shop/HLA-OvenMittens.webp',
     url: 'https://shop.hotlavaagency.com/products/hot-lava-mitts',
     darkBackground: true,
-    bgColor: '#ddf3e7',
+    bgColor: '#A8D5E2',
     bgSize: 'cover',
   },
 ];
