--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,8 @@ const query = `
   *[_id == "siteSettings"]{
     siteTitle,  
     contactInfo,
-    socialLinks
+    socialLinks,
+    footerTitle
   }[0]
 `
 
